--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,6 +42,7 @@
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About us</a></li>
+          <li><a href="/location">Store Locator</a></li>
           <li><a href="/login">Login</a></li>
         </ul>
       </nav>
