--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -104,9 +104,9 @@
             <img src="/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>30 Years of Professional sunbed tanning </h3>
+            <h3>30 Years of Professional Sunbed Tanning </h3>
             <p>
-              While The Tanning Shop has developed and grown over the years, our core philosophy has remained the same;
+              While The Tanning Salon has developed and grown over the years, our core philosophy has remained the same;
               to provide responsible tanning solutions in a professional and friendly environment. That is The Tanning
               Salon IE. difference.
             </p>
@@ -218,10 +218,8 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#"> Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#"> About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#"> Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#"> Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#"> Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#about"> About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="/location"> Store Locator</a></li>
             </ul>
           </div>
 
